Add recording overlay and Linear16 audio support
Introduce a lightweight recording overlay and switch audio streaming to Linear16 PCM for Deepgram compatibility. Key changes:

- Add overlay renderer (overlay.html/.css/.ts) and wire an always-on-top, click-through overlay window in main process; expose show/hide handlers and integrate with hotkey events for immediate feedback.
- Add new window entry in forge.config.js for the overlay bundle.
- Replace MediaRecorder/webm approach with an AudioContext + ScriptProcessor capture in src/renderer/audio.ts to produce Int16 Linear16 PCM at 16kHz and stream chunks to main.
- Update deepgram handler (src/main/deepgram.ts) to request encoding/sample_rate/channels and improve connection checks/error logging when sending audio.
- Enhance hotkey handling (src/main/hotkey.ts) to emit keyPressed/keyReleased for faster UI feedback and reduce debounce for responsiveness.
- Add robust tray icon loading in src/main/tray.ts: resolve assets path for packaged/dev builds and create fallback colored icons when load fails.
- Big visual refresh for settings (settings.css) and minor HTML/CSP/font enhancements in settings.html; add state tracking and color restore in settings.ts.

Also includes small safety/cleanup changes (overlay cleanup on quit, improved logging, and error handling).

--- a/src/renderer/settings.html
+++ b/src/renderer/settings.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com">
   <title>LisperFlow Settings</title>
-  <link rel="stylesheet" href="settings.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="container">
     <h1>LisperFlow Settings</h1>
@@ -18,25 +23,15 @@
     <form id="settingsForm">
       <div class="form-group">
         <label for="deepgramApiKey">Deepgram API Key</label>
-        <input
-          type="password"
-          id="deepgramApiKey"
-          name="deepgramApiKey"
-          placeholder="Enter your Deepgram API key"
-          autocomplete="off"
-        >
+        <input type="password" id="deepgramApiKey" name="deepgramApiKey" placeholder="Enter your Deepgram API key"
+          autocomplete="off">
         <small>Get your API key at <a href="#" id="deepgramLink">console.deepgram.com</a></small>
       </div>
 
       <div class="form-group">
         <label for="llmApiKey">OpenAI API Key (Optional)</label>
-        <input
-          type="password"
-          id="llmApiKey"
-          name="llmApiKey"
-          placeholder="Enter your OpenAI API key"
-          autocomplete="off"
-        >
+        <input type="password" id="llmApiKey" name="llmApiKey" placeholder="Enter your OpenAI API key"
+          autocomplete="off">
         <small>Required for AI transcript cleanup</small>
       </div>
 
@@ -78,4 +73,5 @@
     </div>
   </div>
 </body>
+
 </html>
