Add debug logging, hotkey guards, and CSP
Add extensive runtime logging and robustness around hotkey, IPC and settings flows, and relax renderer CSP for local/dev connections.

Summary of changes:
- src/main/hotkey.ts: add checks and logs for existing listener, wrap GlobalKeyboardListener creation in try/catch, register listener with logs, and log LEFT CTRL key events for debugging.
- src/main/main.ts: log app lifecycle steps (window creation, tray init, handler setup), add masked logging for SETTINGS_GET/SET IPC handlers, add logs for hotkey events (press/release/recording start/stop), and more startup logs.
- src/renderer/*.html (audio.html, overlay.html, settings.html): relax Content-Security-Policy to allow 'unsafe-inline'/'unsafe-eval' and add connect-src entries for ws://localhost:* and http://localhost:* to permit local dev websocket/http connections.
- src/renderer/settings.ts: add many console logs around loading/saving settings, mask API keys in logs, log form submissions and element initialization, and keep form values logged to help debug clearing issues.

Rationale: Improve observability to diagnose hotkey, IPC and settings issues during development. Note: CSP has been relaxed for local/dev connectivity — revert to stricter policies and remove verbose logging before production release.

--- a/src/renderer/settings.html
+++ b/src/renderer/settings.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com">
+    content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; connect-src 'self' ws://localhost:* http://localhost:*">
   <title>LisperFlow Settings</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
